--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section id="portfolio">
         <div class="container mt-3">
-            <h1 class="text-center">Portfolio</h1>
+            <h1 class="text-center">Портфолио:</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
