--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <h4 class="card-title">Проект 1</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                             <h4 class="card-title">Проект 2</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                             <h4 class="card-title">Проект 3</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                             <h4 class="card-title">Проект 4</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                             <h4 class="card-title">Проект 5</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                             <h4 class="card-title">Проект 6</h4>
                             <p class="card-text">Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю. Съешь ещё этих мягких французских булок, да выпей чаю</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Ссылка</a>
                             </div>
                         </div>
                     </div>
